<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current"
            android:icon="@drawable/book_current_black"
            android:title="@string/current_book" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/all_books_black"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info_black"
            android:title="@string/about_app" />
    </group>

    <item android:title="@string/options">
        <menu>
            <group android:checkableBehavior="single">
                <item
                android:id="@+id/nav_toggle"
                app:actionLayout="@layout/toggle_layout"
                android:title="@string/night_mode"
                android:icon="@drawable/night_mode" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
            </group>
        </menu>
    </item>
</menu>
